# bifrost

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  clippy.toml  docker-compose.dev.yml  docker-compose.traefik.yml  docker-compose.yml  package.json  tailwind.config.ts  tailwind.css
.cargo/: config.toml
.github/workflows/: codecov.yml  docker-build.yml
bifrost-test-utils/: Cargo.toml
bifrost-test-utils/src/: builder.rs  constant.rs  context.rs  error.rs  eve.rs  lib.rs  model.rs  prelude.rs  redis.rs  setup.rs  user.rs
bifrost-test-utils/src/eve/: data.rs  mock.rs  mockito.rs  mod.rs
bifrost-test-utils/src/fixtures/: mod.rs  user.rs
bifrost-test-utils/src/fixtures/auth/: factory.rs  mock.rs  mockito.rs  mod.rs  private_test_rsa_key.pem  public_test_rsa_key.pem
bifrost-test-utils/src/fixtures/eve/: data.rs  factory.rs  mock.rs  mockito.rs  mod.rs
bifrost-test-utils/src/fixtures/user/: factory.rs  mod.rs
entity/src/entities/: bifrost_auth_user.rs  bifrost_auth_user_character.rs  bifrost_auth_user_character_history.rs  bifrost_user.rs  bifrost_user_character.rs  bifrost_user_character_history.rs  eve_alliance.rs  eve_character.rs  eve_corporation.rs  eve_faction.rs  mod.rs  post.rs  prelude.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20251017_000001_create_eve_faction_table.rs  m20251017_000001_eve_faction.rs  m20251017_000002_create_eve_alliance_table.rs  m20251017_000002_eve_alliance.rs  m20251017_000003_create_eve_corporation_table.rs  m20251017_000003_eve_corporation.rs  m20251017_000004_create_eve_character_table.rs  m20251017_000004_eve_character.rs  m20251017_000005_bifrost_auth_user.rs  m20251017_000005_create_bifrost_user_table.rs  m20251017_000006_bifrost_auth_user_character.rs  m20251017_000006_create_bifrost_auth_user_character_table.rs  m20251017_000006_create_bifrost_user_character_table.rs  m20251017_000007_bifrost_auth_user_character_history.rs  m20251017_000007_create_bifrost_auth_user_character_history_table.rs  m20251017_000007_create_bifrost_user_character_history_table.rs  m20251101_000007_create_bifrost_scheduler_queue.rs
src/: lib.rs  main.rs
src/client/: app.rs  mod.rs  router.rs
src/client/components/: bifrost_title.rs  eve_login.rs  mod.rs  navbar.rs  page.rs
src/client/components/auth/: layout.rs  mod.rs  navbar.rs
src/client/routes/: blog.rs  home.rs  mod.rs  not_found.rs
src/client/routes/auth/: dashboard.rs  home.rs  mod.rs
src/client/util/: get_user_character.rs  mod.rs
src/model/: api.rs  user.rs
src/server/: config.rs  error.rs  mod.rs  router.rs  scheduler.rs  startup.rs  worker.rs
src/server/controller/: auth.rs  mod.rs  user.rs
src/server/controller/auth/: callback.rs  csrf.rs  login.rs  mod.rs
src/server/controller/util/: csrf.rs  get_user.rs  mod.rs
src/server/data/: mod.rs
src/server/data/eve/: alliance.rs  character.rs  corporation.rs  faction.rs  mod.rs
src/server/data/user/: mod.rs  user.rs  user_character.rs
src/server/error/: auth.rs  config.rs  eve.rs  mod.rs  retry.rs  worker.rs
src/server/model/: app.rs  auth.rs  db.rs  mod.rs  session.rs  worker.rs
src/server/model/session/: auth.rs  change_main.rs  mod.rs  user.rs
src/server/scheduler/: config.rs  cron.rs  entity_refresh.rs  mod.rs  schedule.rs
src/server/scheduler/eve/: affiliation.rs  alliance.rs  character.rs  corporation.rs  faction.rs  mod.rs
src/server/service/: context.rs  mod.rs  retry.rs  user.rs
src/server/service/auth/: callback.rs  login.rs  mod.rs
src/server/service/eve/: affiliation.rs  alliance.rs  cache.rs  character.rs  corporation.rs  faction.rs  mod.rs
src/server/service/orchestrator/: alliance.rs  cache.rs  character.rs  corporation.rs  eve.rs  faction.rs  mod.rs
src/server/service/provider/: builder.rs  mod.rs  stored.rs
src/server/service/retry/: mod.rs
src/server/service/user/: mod.rs  user_character.rs
src/server/task/: eve.rs  mod.rs  util.rs
src/server/util/: eve.rs  mod.rs  test.rs  time.rs
src/server/util/task/: entity_refresh.rs  mod.rs  schedule.rs
src/server/util/test/: mod.rs  setup.rs
src/server/worker/: handler.rs  mod.rs  new_handler.rs  pool.rs
src/server/worker/handler/: eve.rs  mod.rs
src/server/worker/new_worker/: config.rs  context.rs  dispatcher.rs  mod.rs  pool.rs
src/server/worker/pool/: config.rs  context.rs  dispatcher.rs  mod.rs  supervisor.rs
src/server/worker/queue/: config.rs  lua.rs  mod.rs
tests/: setup.rs  tests.rs
tests/controller/: mod.rs
tests/controller/auth/: callback.rs  login.rs  logout.rs  mod.rs  user.rs
tests/controller/user/: get_user_characters.rs  mod.rs
tests/scheduler/: entity_refresh.rs  mod.rs
tests/scheduler/entity_refresh/: find_entries_needing_update.rs  mod.rs  schedule_jobs.rs
tests/scheduler/eve/: affiliation.rs  alliance.rs  character.rs  corporation.rs  faction.rs  mod.rs
tests/service/: mod.rs
tests/service/auth/callback/: authenticate_and_get_claims.rs  get_character_ownership_status.rs  get_or_create_user.rs  handle_callback.rs  mod.rs
tests/service/eve/: mod.rs
tests/service/eve/affiliation/: mod.rs  update_affiliations.rs
tests/service/eve/alliance/: update.rs  upsert.rs
tests/service/eve/character/: update.rs  upsert.rs
tests/service/eve/corporation/: mod.rs  update.rs  upsert.rs
tests/service/eve/faction/: mod.rs  update.rs  update_factions.rs
tests/service/user/: mod.rs
tests/service/user/user/: get_user.rs
tests/service/user/user_character/: get_user_characters.rs  link_character.rs  mod.rs  set_main_character.rs  transfer_character.rs
tests/util/: mock.rs  mod.rs  redis.rs  setup.rs  test_utils.rs
tests/util/auth/: README.md  jwt.rs
tests/util/mockito/: character.rs  corporation.rs
tests/worker/: mod.rs
tests/worker/pool/: configuration.rs  job_processing.rs  lifecycle.rs  mod.rs  permits.rs  pool.rs
tests/worker/pool/lifecycle/: cleanup_task.rs  dispatcher_management.rs  mod.rs  start_stop.rs
tests/worker/queue/: cleanup.rs  is_empty.rs  len.rs  mod.rs  pop.rs  push.rs  schedule.rs  schedule_retry.rs
(+139 files in other folders)
