[package]
name = "bifrost"
version = "0.1.0"
edition = "2021"
description = "Authentication platform for EVE Online corporations, alliances, and coalitions"
repository = "https://github.com/autumn-order/bifrost"

[workspace]
members = [".", "bifrost-test-utils", "entity", "migration"]

[workspace.dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
entity = { path = "entity" }
eve_esi = { version = "0.4.8" }
jsonwebtoken = "9.3.1"
mockito = "1.7.0"
oauth2 = "5.0.0"
openssl = "0.10.74"
sea-orm = { version = "2.0.0-rc.11" }
serde_json = "1.0.145"
thiserror = { version = "2.0.17" }
tower-sessions = { version = "0.14.0" }

[dependencies]
axum = { version = "0.8.6", optional = true }
chrono = { workspace = true }
dioxus = { version = "0.7.0", features = ["fullstack", "router"] }
dioxus-cli-config = { version = "0.7.0", optional = true }
dioxus-logger = "0.7.0"
dotenvy = { version = "0.15.7", optional = true }
entity = { workspace = true, optional = true }
eve_esi = { workspace = true, optional = true }
migration = { path = "migration", optional = true }
oauth2 = { version = "5.0.0", optional = true }
sea-orm = { workspace = true, features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-chrono"
], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = { workspace = true, optional = true }
time = { version = "0.3.44", optional = true }
tokio = { version = "1.48.0", features = ["macros"], optional = true }
tower-sessions = { workspace = true, optional = true }
tower-sessions-redis-store = { version = "0.16.0", optional = true }

[dev-dependencies]
bifrost-test-utils = { path = "bifrost-test-utils" }

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
  "axum",
  "dioxus-cli-config",
  "dioxus/server",
  "dotenvy",
  "entity",
  "eve_esi",
  "migration",
  "oauth2",
  "sea-orm",
  "thiserror",
  "time",
  "tokio",
  "tower-sessions",
  "tower-sessions-redis-store"
]
web = ["dioxus/web"]

[profile.android-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
