[package]
name = "bifrost"
version = "0.1.0"
edition = "2021"
description = "Authentication platform for EVE Online corporations, alliances, and coalitions"
repository = "https://github.com/autumn-order/bifrost"

[workspace]
members = [".", "bifrost-test-utils", "entity", "migration"]

[workspace.dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
entity = { path = "entity" }
eve_esi = { version = "0.4.8" }
jsonwebtoken = "9.3.1"
mockito = "1.7.0"
oauth2 = "5.0.0"
openssl = "0.10.74"
sea-orm = { version = "2.0.0-rc.11" }
serde_json = "1.0.145"
thiserror = { version = "2.0.17" }
tower-sessions = { version = "0.14.0" }

[dependencies]
apalis = { version = "0.7.3", features = ["limit"], optional = true }
apalis-redis = { version = "0.7.3", optional = true }
axum = { version = "0.8.6", optional = true }
chrono = { workspace = true }
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
dioxus-cli-config = { version = "0.7.1", optional = true }
dioxus-logger = "0.7.1"
dotenvy = { version = "0.15.7", optional = true }
entity = { workspace = true, optional = true }
eve_esi = { workspace = true, optional = true }
fred = { version = "10.1.0", optional = true }
futures = { version = "0.3", optional = true }
migration = { path = "migration", optional = true }
oauth2 = { version = "5.0.0", optional = true }
reqwasm = { version = "0.5.0", optional = true }
sea-orm = { workspace = true, features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-chrono"
], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = { workspace = true, optional = true }
time = { version = "0.3.44", optional = true }
tokio = { version = "1.48.0", features = ["macros"], optional = true }
tokio-cron-scheduler = { version = "0.15.1", optional = true }
tower = { version = "0.5.2", optional = true }
tower-sessions = { workspace = true, optional = true }
tower-sessions-redis-store = { version = "0.16.0", optional = true }
utoipa = { version = "5.4.0", features = ["axum_extras"], optional = true }
utoipa-axum = { version = "0.2.0", optional = true }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"], optional = true }

[dev-dependencies]
bifrost-test-utils = { path = "bifrost-test-utils" }

[features]
default = ["web", "reqwasm"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
  "apalis",
  "apalis-redis",
  "axum",
  "dioxus-cli-config",
  "dioxus/server",
  "dotenvy",
  "entity",
  "eve_esi",
  "fred",
  "futures",
  "migration",
  "oauth2",
  "sea-orm",
  "thiserror",
  "time",
  "tokio",
  "tokio-cron-scheduler",
  "tower",
  "tower-sessions",
  "tower-sessions-redis-store",
  "utoipa",
  "utoipa-axum",
  "utoipa-swagger-ui"
]
web = ["dioxus/web"]

[profile.android-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
