[package]
name = "bifrost-test-utils"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "bifrost_test_utils"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
entity = { workspace = true }
eve_esi = { workspace = true }
mockito = { workspace = true }
sea-orm = { workspace = true, features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-chrono"
] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tower-sessions = { workspace = true }
