[package]
name = "bifrost-test-utils"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "bifrost_test_utils"
path = "src/lib.rs"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
entity = { workspace = true }
eve_esi = { workspace = true }
jsonwebtoken = { workspace = true }
mockito = { workspace = true }
oauth2 = { workspace = true }
openssl = { workspace = true }
sea-orm = { workspace = true, features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "with-chrono"
] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tower-sessions = { workspace = true }
